Um pouco de formatação e termino da base de html

--- a/trabalho1.css
+++ b/trabalho1.css
@@ -3,14 +3,19 @@
   }
 
   .curriculo {
+    font-family: 'Germania One', cursive;
+    border-style: double;
     background-color:	#cce6ff;
-
+    text-align: justify;
     width: 800px;
     margin: 0 auto;
   }
 
-  .nome{
+
+  .nome h1{
+    font-weight: normal;
     float: left;
+    margin-left: 30px;
   }
 
   .info{
